# vicon2gt

./: .dockerignore  CMakeLists.txt  Dockerfile  ReadMe.md
src/: estimate_vicon2gt_csv.cpp
src/meas/: Interpolator.cpp  Propagator.cpp
src/solver/: ViconGraphSolver.cpp  ViconGraphSolver.h
